<resources>
    <string name="app_name">ChillTime</string>
    <string name="student_sign_in">Đăng nhập sinh viên</string>
    <string name="teacher_sign_in">Đăng nhập giảng viên</string>
    <string name="admin_sign_in">Đăng nhập admin</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="teacher">Giảng viên</string>
    <string name="student">Sinh viên</string>
    <string name="classs">Lớp học</string>
    <string name="room">Phòng học</string>
    <string name="subject">Môn học</string>
    <string name="logout">Đăng xuất</string>
    <string name="schedule">TKB</string>
    <string name="transcript">Bảng điểm</string>
    <string name="profile">Cá nhân</string>
    <string name="class_list">Danh sách lớp học</string>
    <string name="class_add">Thêm lớp</string>
    <string name="class_search">Tìm kiếm: </string>
    <string name="class_id">Mã lớp</string>
    <string name="class_subject">Môn học</string>
    <string name="modify">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="teacher_list">Danh sách giảng viên</string>
    <string name="teacher_add">Thêm giảng viên</string>
    <string name="teacher_id">Mã GV</string>
    <string name="teacher_name">Tên GV</string>
    <string name="student_id">Mã HS</string>
    <string name="student_name">Tên HS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password"><u>Quên mật khẩu</u></string>
</resources>