<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminClassFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_class_fragment"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/class_list"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_class_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_class_fragment">

<!--            <TextView-->
<!--                android:id="@+id/tv_class_search"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="end"-->
<!--                android:text="@string/class_search"-->
<!--                android:textSize="15sp" />-->
            <Spinner
                android:id="@+id/spn_class_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/class_search"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_class_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_class_search"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/icon_search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_class_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_class_add"
            app:layout_constraintTop_toBottomOf="@id/ll_class_features"
            android:background="@drawable/border_1dp">

            <LinearLayout
                android:id="@+id/ll_text_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/blue"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/border_1px"
                    android:gravity="center"
                    android:text="@string/class_id"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border_1px"
                    android:gravity="center"
                    android:text="@string/class_subject"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_1px"
                    android:gravity="center"
                    android:text="@string/modify"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_1px"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_student_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_class_features" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_class_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_class_list"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            android:text="@string/class_add"
            android:textSize="15sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>