<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInAdminActivity">

    <ImageView
        android:id="@+id/thumbnail_sign_in"
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/thumbnail_sign_in"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/admin_tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_sign_in"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/thumbnail_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/admin_tv_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_tv_sign_in" />
    <EditText
        android:id="@+id/admin_et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/admin_tv_sign_in"
        app:layout_constraintStart_toEndOf="@id/admin_tv_username"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/admin_tv_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_tv_username" />
    <EditText
        android:id="@+id/admin_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:password="true"
        app:layout_constraintTop_toBottomOf="@id/admin_tv_username"
        app:layout_constraintStart_toEndOf="@id/admin_tv_username"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/admin_btn_back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_back"
        android:padding="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <Button
        android:id="@+id/admin_btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/admin_et_password"
        app:layout_constraintStart_toEndOf="@id/admin_tv_password"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>